<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="24dp"
    app:layout_constraintTop_toBottomOf="@+id/toolbar"
    tools:context="com.example.william.family.EditMemberFragment"
    tools:showIn="@layout/activity_edit_member">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:divider="@android:color/holo_blue_light"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loadedfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_marginTop="64dp"
            android:text="@string/nofile"
            android:visibility="visible" />

        <TableLayout
            android:id="@+id/personHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_bright"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TableRow
                android:id="@+id/header_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:text="@string/header_select"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:minWidth="112dp"
                    android:text="@string/header_name"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="center"
                    android:text="@string/header_sex"
                    android:visibility="visible" />

            </TableRow>
        </TableLayout>

        <ScrollView
            android:id="@+id/scrollvw1"
            style="@android:style/Widget.Material.ScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="1dp"
            android:fillViewport="false"
            android:scrollbarStyle="outsideOverlay"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableLayout
                android:id="@+id/personlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_bright"
                android:visibility="visible">


            </TableLayout>

        </ScrollView>

        <TableLayout
            android:id="@+id/model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@+id/personlist">

            <TableRow
                android:id="@+id/model_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart">

                <CheckBox
                    android:id="@+id/model_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/model_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:background="@android:color/holo_green_light"
                    android:minWidth="64dp"
                    android:text="TextView" />

                <ToggleButton
                    android:id="@+id/model_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="left"
                    android:layout_marginStart="32dp"
                    android:checked="true"
                    android:editable="false"
                    android:elevation="0dp"
                    android:text="Male"
                    android:textOff="@string/male"
                    android:textOn="@string/female" />

            </TableRow>
        </TableLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
